@@ -1,5 +1,8 @@
 ChangeLog file for Endian libencloud
 
+libencloud 0.X:
+	- custom ProxyFactory to avoid proxying localhost requests [CONNECT-106]
+
 libencloud 0.6 (02/04/2014):
 	- major rewrite and fixes
 	- renaming s/ece/libencloud
